--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -1321,6 +1321,11 @@
           <version>${maven-shade-plugin.version}</version>
         </plugin>
         <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>jarjar-maven-plugin</artifactId>
+          <version>1.9</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
