HDFS-11768. Ozone: KSM: Create Key Space manager service. Contributed by Anu Engineer.

--- a/hadoop-hdfs-project/hadoop-hdfs-client/pom.xml
+++ b/hadoop-hdfs-project/hadoop-hdfs-client/pom.xml
@@ -190,6 +190,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                   <include>ReconfigurationProtocol.proto</include>
                   <include>StorageContainerLocationProtocol.proto</include>
                   <include>DatanodeContainerProtocol.proto</include>
+                  <include>Ozone.proto</include>
+                  <include>KeySpaceManagerProtocol.proto</include>
                 </includes>
               </source>
             </configuration>
