HDFS-11859. Ozone: SCM: Separate BlockLocationProtocol from ContainerLocationProtocol. Contributed by Xiaoyu Yao.

--- a/hadoop-hdfs-project/hadoop-hdfs-client/pom.xml
+++ b/hadoop-hdfs-project/hadoop-hdfs-client/pom.xml
@@ -192,6 +192,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                   <include>DatanodeContainerProtocol.proto</include>
                   <include>Ozone.proto</include>
                   <include>KeySpaceManagerProtocol.proto</include>
+                  <include>ScmBlockLocationProtocol.proto</include>
                 </includes>
               </source>
             </configuration>
