HADOOP-14426. Upgrade Kerby version from 1.0.0-RC2 to 1.0.0. Contributed by Jiajia Li.

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -1259,7 +1259,7 @@
         <dependency>
           <groupId>org.apache.kerby</groupId>
           <artifactId>kerb-simplekdc</artifactId>
-          <version>1.0.0-RC2</version>
+          <version>1.0.0</version>
         </dependency>
     </dependencies>
   </dependencyManagement>
