HADOOP-14310. RolloverSignerSecretProvider.LOG should be @VisibleForTesting (Contributed by Arun Shanmugam Kumar via Daniel Templeton)

--- a/hadoop-common-project/hadoop-auth/pom.xml
+++ b/hadoop-common-project/hadoop-auth/pom.xml
@@ -181,6 +181,11 @@
       <version>${apacheds.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
