HADOOP-14501. Switch from aalto-xml to woodstox to handle odd XML features (jeagles)

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -773,9 +773,9 @@
         <version>3.1.4</version>
       </dependency>
       <dependency>
-        <groupId>com.fasterxml</groupId>
-        <artifactId>aalto-xml</artifactId>
-        <version>1.0.0</version>
+        <groupId>com.fasterxml.woodstox</groupId>
+        <artifactId>woodstox-core</artifactId>
+        <version>5.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
