--- a/hadoop-tools/hadoop-pipes/pom.xml
+++ b/hadoop-tools/hadoop-pipes/pom.xml
@@ -39,6 +39,9 @@
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
+      <properties>
+        <openssl.prefix></openssl.prefix>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -53,6 +56,7 @@
                   <source>${basedir}/src</source>
                   <vars>
                     <JVM_ARCH_DATA_MODEL>${sun.arch.data.model}</JVM_ARCH_DATA_MODEL>
+                    <OPENSSL_ROOT_DIR>${openssl.prefix} </OPENSSL_ROOT_DIR>
                   </vars>
                 </configuration>
               </execution>
