HDFS-12028. Reapply: Ozone: CLI: remove noisy slf4j binding output from hdfs oz command. Contributed by Chen Liang.
While committing HDFS-12115, I accidently removed this patch. Reapplying the same patch again.

--- a/hadoop-hdfs-project/hadoop-hdfs/pom.xml
+++ b/hadoop-hdfs-project/hadoop-hdfs/pom.xml
@@ -213,6 +213,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
       <artifactId>target</artifactId>
       <version>2.5.3</version>
       <optional>true</optional>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jctools</groupId>
