--- a/dev-support/docker/Dockerfile
+++ b/dev-support/docker/Dockerfile
@@ -70,7 +70,7 @@ RUN apt-get -q update && apt-get -q install --no-install-recommends -y \
 RUN cd /usr/share/maven/lib && ln -s ../../java/commons-lang.jar .
 
 #######
-# Oracle Java
+# Java OpenJDK
 #######
 
 RUN echo "dot_style = mega" > "/root/.wgetrc"
@@ -80,9 +80,8 @@ RUN apt-get -q install --no-install-recommends -y software-properties-common
 RUN add-apt-repository -y ppa:webupd8team/java
 RUN apt-get -q update
 
-# Auto-accept the Oracle JDK license
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
-RUN apt-get -q install --no-install-recommends -y oracle-java8-installer
+# Install OpenJDK 7
+RUN apt-get -q install --no-install-recommends -y openjdk-7-jdk
 
 ######
 # Install findbugs
