HDFS-11563. Ozone: enforce DependencyConvergence uniqueVersions.

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -1615,9 +1615,7 @@
             <configuration>
               <rules>
                 <DependencyConvergence>
-                  <!--
-                  <uniqueversions>true</uniqueversions>
-                  -->
+                  <uniqueVersions>true</uniqueVersions>
                 </DependencyConvergence>
                 <bannedDependencies>
                   <excludes>
